updating case studies 2 and 3

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -8,7 +8,7 @@
 		"link": "/water-rangers"
 	},
 	{
-		"name": "Process optimization for data uploads",
+		"name": "Reducing Redundancies for Data Uploads",
 		"date": "Fall 2020",
 		"forWho": "Innovation Canada",
 		"description": "Optimizing the process used to upload important licencing data to SPECTRAplus.",
@@ -16,7 +16,7 @@
 		"link": "/innovation-canada"
 	},
 	{
-		"name": "Web page optimization for benefit delivery",
+		"name": "Webpage Optimization for Benefit Delivery",
 		"date": "Winter 2020",
 		"forWho": "Employment & Social Development Canada",
 		"description": "Optimizing benefits delivery web pages to improve accessibility and experience for users.",
