--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,6 +1,6 @@
 [
 	{
-		"name": "Improving user experience for first time users",
+		"name": "Improving UX for First Fime Users",
 		"date": "Spring 2021",
 		"forWho": "Water Rangers",
 		"description": "Using data to design changes and improve user experience and retention on the Water Rangers data platform.",
