--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,14 +9,16 @@ on:
     branches: [ main ]
 
 jobs:
-  build_vue:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    name: Build Vue
     steps:
-    - uses: actions/checkout@v2
-    - id: Build-Vue
-      uses: xRealNeon/VuePagesAction@1.0.0
-      with:
-        username: 'sarahmacintosh'
-        reponame: 'portfolio-fall-2021'
-        token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+    - name: Checkout
+      uses: actions/checkout@master
+
+    - name: Build and Deploy
+      uses: rreichel3/vuepress-github-actions-deploy@master
+      env:
+        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        BUILD_DIR: dist/
+        BUILD_SCRIPT: npm install && npm run build # The build script the action should run prior to deploying.
+        PAGES_CNAME: sarahmacintosh.me
