Revert deploy to original action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,29 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build_vue:
     runs-on: ubuntu-latest
+    name: Build Vue
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+    - uses: actions/checkout@v2
+    - id: Build-Vue
+      uses: xRealNeon/VuePagesAction@1.0.0
+      with:
+        username: 'sarahmacintosh'
+        reponame: 'portfolio-fall-2021'
+        token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
 
-    - name: Build and Deploy
-      uses: rreichel3/vuepress-github-actions-deploy@master
-      env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BUILD_DIR: dist/
-        BUILD_SCRIPT: npm install && npm run build # The build script the action should run prior to deploying.
-        PAGES_CNAME: sarahmacintosh.me
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@master
+
+#     - name: Build and Deploy
+#       uses: rreichel3/vuepress-github-actions-deploy@master
+#       env:
+#         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+#         BUILD_DIR: dist/
+#         BUILD_SCRIPT: npm install && npm run build # The build script the action should run prior to deploying.
+#         PAGES_CNAME: sarahmacintosh.me
