--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,29 +9,31 @@ on:
     branches: [ main ]
 
 jobs:
-  build_vue:
-    runs-on: ubuntu-latest
-    name: Build Vue
+  cd:
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [14]
+
     steps:
-    - uses: actions/checkout@v2
-    - id: Build-Vue
-      uses: xRealNeon/VuePagesAction@1.0.0
-      with:
-        username: 'sarahmacintosh'
-        reponame: 'portfolio-fall-2021'
-        token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+      - name: Checkout
+        uses: actions/checkout@master
 
-# jobs:
-#   build-and-deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout
-#       uses: actions/checkout@master
+      - name: Setup node env
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: ${{ matrix.node }}
 
-#     - name: Build and Deploy
-#       uses: rreichel3/vuepress-github-actions-deploy@master
-#       env:
-#         ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-#         BUILD_DIR: dist/
-#         BUILD_SCRIPT: npm install && npm run build # The build script the action should run prior to deploying.
-#         PAGES_CNAME: sarahmacintosh.me
+      - name: Install dependencies
+        run: yarn
+
+      - name: Generate
+        run: yarn run generate
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
