--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: yarn
 
       - name: Generate
-        run: yarn run generate
+        run: yarn run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
