more cosmetic fixes and fixing RA link

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -37,6 +37,6 @@
 		"forWho": "Carleton University Math Lab",
 		"description": "Collecting and analyzing data for the LLAMA project on Dr. Jo-Anne Lefevre's research team.",
 		"image": "carleton-logo.jpeg",
-		"link": "/esdc"
+		"link": "/carleton"
 	}
 ]
