--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -1,10 +1,10 @@
 [
 	{
-		"name": "Designing Custom Collaboration Solutions for Enterprises - Coming Soon",
-		"date": "Winter 2022",
-		"forWho": "TRIYO",
-		"description": "Modifying existing software and designing new features to meet unique business needs.",
-		"image": "triyo-logo.png"
+		"name": "UX Research for Design System Development - Coming Soon",
+		"date": "Fall 2022",
+		"forWho": "PerkinElmer",
+		"description": "Using user research, usability testing and ISO standards to make data driven design decisions.",
+		"image": "PKI-logo.jpg"
 		
 	},
 	{
@@ -12,7 +12,7 @@
 		"date": "Spring 2021",
 		"forWho": "Water Rangers",
 		"description": "Using data to design changes and improve user experience and retention on the Water Rangers data platform.",
-		"image": "sweb-temp-WR.png",
+		"image": "WR-logo.png",
 		"link": "/water-rangers"
 	},
 	{
@@ -20,7 +20,7 @@
 		"date": "Fall 2020",
 		"forWho": "Innovation Canada",
 		"description": "Optimizing the process used to upload important licencing data to SPECTRAplus.",
-		"image": "sweb-temp-ISED.png",
+		"image": "ESDC-logo.jpeg",
 		"link": "/innovation-canada"
 	},
 	{
@@ -28,7 +28,7 @@
 		"date": "Winter 2020",
 		"forWho": "Employment & Social Development Canada",
 		"description": "Optimizing benefits delivery web pages to improve accessibility and experience for users.",
-		"image": "sweb-temp-ISED.png",
+		"image": "ESDC-logo.jpeg",
 		"link": "/esdc"
 	},
 	{
@@ -38,5 +38,13 @@
 		"description": "Collecting and analyzing data for the LLAMA project on Dr. Jo-Anne Lefevre's research team.",
 		"image": "carleton-logo.jpeg",
 		"link": "/carleton"
+	},
+	{
+		"name": "Designing Custom Collaboration Solutions for Enterprises - Coming Soon",
+		"date": "Winter 2022",
+		"forWho": "TRIYO",
+		"description": "Modifying existing software and designing new features to meet unique business needs.",
+		"image": "triyo-logo.png"
+		
 	}
 ]
